fix: cross website spacing issue

--- a/src/app/about-me/styles.module.scss
+++ b/src/app/about-me/styles.module.scss
@@ -1,5 +1,6 @@
 .page {
   padding-bottom: 4rem;
+  margin-top: 2rem;
 
   &__container {
     display: grid;
