--- a/src/app/contact/page.module.scss
+++ b/src/app/contact/page.module.scss
@@ -1,5 +1,6 @@
 .contact {
   padding: 0;
+  margin-top: 2rem;
   a {
     color: var(--color-pink);
   }
