--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -2,7 +2,7 @@
 }
 
 .home__header {
-  margin-top: 4rem;
+  margin-top: 8rem;
   z-index: 10;
   img {
     margin-bottom: 2rem;
