--- a/src/app/projects/styles.module.scss
+++ b/src/app/projects/styles.module.scss
@@ -1,4 +1,5 @@
 .projectsPage {
+  margin-top: 2rem;
 
   &__container {
     max-width: var(--container-max-size);
